@@ -6,6 +6,11 @@ MIDIboxSID V2.044
    o envelopes are now released properly when a note is played via the SysEx editor
      (or with the PLAY button)
 
+   o swapped behaviour of ENC speed control again, so that encoders are at fast speed
+     by default, and slow if SHIFT button pressed.
+     This behaviour can now be alternated in your setup_*.asm file by changing
+     the DEFAULT_SHIFT_SPEED_CONTROL_MODE option
+
    o implemented special encoder testmode which can be enabled with
      DEFAULT_TESTMODE_ENC_SPEED in the setup_*.asm file
 
